// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/card should match snapshot 1`] = `
<div
  className="Card__card"
>
  <div
    className="Card__cardHeader"
  >
    <div
      className="Card__cardHeaderText"
    >
      <div
        className="Card__cardHeaderText-top"
      >
        <FormattedMessage
          defaultMessage="Custom retention policies"
          id="admin.data_retention.customPolicies.title"
        />
      </div>
      <div
        className="Card__cardHeaderText-bottom"
      >
        <FormattedMessage
          defaultMessage="Customize how long specific teams and channels will keep messages."
          id="admin.data_retention.customPolicies.subTitle"
        />
      </div>
    </div>
  </div>
  <div
    className="Card__cardBody"
  >
    Hello!
  </div>
</div>
`;

exports[`components/admin_console/card should show button in card header 1`] = `
<div
  className="Card__card"
>
  <div
    className="Card__cardHeader"
  >
    <div
      className="Card__cardHeaderText"
    >
      <div
        className="Card__cardHeaderText-top"
      >
        <FormattedMessage
          defaultMessage="Custom retention policies"
          id="admin.data_retention.customPolicies.title"
        />
      </div>
      <div
        className="Card__cardHeaderText-bottom"
      >
        <FormattedMessage
          defaultMessage="Customize how long specific teams and channels will keep messages."
          id="admin.data_retention.customPolicies.subTitle"
        />
      </div>
    </div>
    <button
      className="Card__cardHeaderButton primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Add policy"
        id="admin.data_retention.customPolicies.addPolicy"
      />
    </button>
  </div>
  <div
    className="Card__cardBody"
  >
    Hello!
  </div>
</div>
`;